<resources>
    <string name="app_name">智慧林业</string>
    <string name="app_id">5bf766f2</string>
    <string name="classEdit_layer">图层控制</string>
    <string name="classEdit_system">系统设置</string>
    <string name="classEdit_sjsb">事件上报</string>
    <string name="classEdit_editor">小班编辑</string>
    <string name="base_layer">基础图</string>
    <string name="img_layer">影像图</string>
    <string name="relief_layer">地形图</string>
    <string name="img_select">影像图层</string>
    <string name="loginname">用户名</string>
    <string name="loginpsw">密码</string>
    <string name="login_dl">登录</string>
    <string name="remaberpsw">记住密码</string>
    <string name="main_lqgl">林情概览</string>
    <string name="main_zybj">林业巡检</string>
    <string name="main_zjjc">指尖决策</string>
    <string name="main_grzx">个人中心</string>
    <string name="World_Imagery">http://services.arcgisonline.com/arcgis/rest/services/World_Imagery/MapServer</string>
    <string name="ChinaOnline">http://map.geoq.cn/arcgis/rest/services/ChinaOnlineCommunity/MapServer</string>
    <string name="World_Street_Map">http://services.arcgisonline.com/arcgis/rest/services/World_Street_Map/MapServer</string>
    <string name="updata_url">http://101.201.54.143:8031/apk/zjly/zjly_version.xml</string>
    <string name="SERVER_HOST">http://118.178.118.213:8081/</string>
    <string name="txt_smdl">扫码登录</string>
    <string name="txt_setting">我的设置</string>
    <string name="txt_xgmm">修改密码</string>
    <string name="txt_bbgx">版本更新</string>
    <string name="txt_gjcx">轨迹查询</string>
    <string name="upinfo">事件上传</string>
    <string name="selpic">选择照片</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="trackmanager_strattime">请选择开始时间</string>
    <string name="trackmanager_endtime">清选择结束时间</string>
    <string name="trackmanager_comfirm">确定</string>
    <string name="trackmanager_concel">取消</string>
    <string name="trackmanager_title">轨迹查询</string>
    <string name="trackmanager_date1">请选择开始时间</string>
    <string name="trackmanager_date2">请选择结束时间</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inspection">林业巡检</string>
    <string name="overview">林情概览</string>
    <string name="zjjc">指尖决策</string>
    <string name="center">用户中心</string>
    <string name="xbbj_add">新增小班</string>
    <string name="xbbj_addgb">共边小班</string>
    <string name="xbbj_copy">小班复制</string>
    <string name="xbbj_delete">小班删除</string>
    <string name="xbbj_revert">撤销</string>
    <string name="xbbj_clip">分割小班</string>
    <string name="xbbj_merge">小班合并</string>
    <string name="xbbj_edit">修班</string>
    <string name="xbbj_attribute">属性编辑</string>
    <string name="xbbj_select">小班选择</string>
    <string name="xbbj_pan">平移</string>
    <string name="jiansuo">条件检索</string>
    <string name="years">年份</string>
    <string name="type">类型</string>
    <string name="index">指标</string>
    <string name="dq">地区</string>
    <string name="sheng">省</string>
    <string name="shi">市(州)</string>
    <string name="qx">区县</string>
    <string name="organizer">主办单位：浙江省林业局\n技术支持：北京航天泰坦科技股份有限公司</string>
    <string name="xmbh">项目编号：</string>
    <string name="xmmc">项目名称</string>
    <string name="cddw">承担单位：</string>
    <string name="zcr">主持人：</string>
    <string name="sqx">市、区县：</string>
    <string name="hcmj">火场面积：</string>
    <string name="ssmj">损失面积：</string>
    <string name="phjf">扑火经费：</string>
    <string name="qs">轻伤：</string>
    <string name="zs">重伤：</string>
    <string name="sw">死亡：</string>
    <string name="ymzs">幼苗株数：</string>
    <string name="clxj">成林蓄积：</string>
    <string name="xxdz">详细地址：</string>
    <string name="ajbh">案件编号：</string>
    <string name="ajwh">案件文号：</string>
    <string name="ajgk">案件归口：</string>
    <string name="ajzt">案件状态：</string>
    <string name="zbr">主办人：</string>
    <string name="banr">报案内容：</string>
    <string name="lx">类型：</string>
    <string name="bh">编号：</string>
    <string name="xs">县市：</string>
    <string name="spqx">审批权限：</string>
    <string name="xmmc2">项目名称：</string>
    <string name="xmpzjg">项目批准机关：</string>
    <string name="pzwh">批准文号：</string>
    <string name="slzbhff">森林植被恢复费：</string>
    <string name="nf">年份：</string>
    <string name="dq2">地区：</string>
    <string name="zlmj">造林面积：</string>
    <string name="rgzlmj">人工造林面积：</string>
    <string name="jdgxmj">迹地更新面积：</string>
    <string name="slfy">森林抚育：</string>
    <string name="fsylmj">年末实有封山(沙)育林面积：</string>
    <string name="spzs">四旁(零星)植树：</string>
    <string name="dnmmcl">当年苗木产量：</string>
    <string name="ymmj">育苗面积：</string>
    <string name="fsyl">封山育林：</string>
    <string name="dxlgz">低效林改造：</string>
    <string name="xymmj">当年新育苗面积：</string>
    <string name="sps">四旁树：</string>
    <string name="bchmc">病虫害名称：</string>
    <string name="fsmj">发生面积：</string>
    <string name="fzmj">防治面积：</string>
    <string name="fzzymj">防治作业面积：</string>
    <string name="czmj">成灾面积：</string>
    <string name="fzfy">防治费用：</string>
    <string name="jzszmj">寄主树种面积：</string>
    <string name="dw">单位：</string>
    <string name="jymj">经营面积：</string>
    <string name="shi2">市：</string>
    <string name="xian">县：</string>
    <string name="slgymc">森林公园名称：</string>
    <string name="jysj">建园时间：</string>
    <string name="pfwh">批复文号：</string>
    <string name="sdmc">湿地名称：</string>
    <string name="bhxs">保护形式：</string>
    <string name="bhqlx">保护区类型：</string>
    <string name="sdmj">湿地面积：</string>
    <string name="ssdq">所属地区：</string>
    <string name="zj">总计：</string>
    <string name="dycy">第一产业：</string>
    <string name="decy">第二产业：</string>
    <string name="dscy">第三产业：</string>
    <string name="lqzbh">林权证编号：</string>
    <string name="lzzn">林证字_年：</string>
    <string name="zhlx">证号类型：</string>
    <string name="lzz">林证字：</string>
    <string name="zt">状态：</string>
    <string name="fzsj">发证时间：</string>
    <string name="xdm">小地名：</string>
    <string name="ldsyqqlr">林地所有权权利人：</string>
    <string name="zl">座落：</string>
    <string name="xz">性质：</string>
    <string name="xzmc">行政名称：</string>
    <string name="cm">村名：</string>
    <string name="djlx">登记类型：</string>
    <string name="spdq">审批地区：</string>
    <string name="bjdbh">报检单编号：</string>
    <string name="dydw">调运单位：</string>
    <string name="cyrxm">承运人姓名：</string>
    <string name="ysgj">运输工具：</string>
    <string name="bjr">报检人：</string>
    <string name="zsbh">证书编号：</string>
    <string name="qymc">企业名称：</string>
    <string name="jbrxm">经办人姓名：</string>
    <string name="shrmc">收货人名称：</string>
    <string name="zwhcply">植物或植物产品来源：</string>
    <string name="qyd">起运地：</string>
    <string name="qfjg">签发机关：</string>
    <string name="jyy">检疫员：</string>
    <string name="bz">备注：</string>
    <string name="qybh">企业编号：</string>
    <string name="sqdw">申请单位/个人：</string>
    <string name="sqsj">申请时间：</string>
    <string name="lxrxm">联系人：</string>
    <string name="zzmj">种植面积：</string>
    <string name="cdjydd">产地检疫地点：</string>
    <string name="ydywdd">预定运往地点：</string>
    <string name="nd">年度：</string>
    <string name="hgzxh">合格证序号：</string>
    <string name="txdz">通讯地址：</string>
    <string name="zwjcpmc">植物及产品名称：</string>
    <string name="cfzh">采伐证号：</string>
    <string name="sqr">申请人：</string>
    <string name="bxdwmc">编限单位名称：</string>
    <string name="gkdwmc">归口单位名称：</string>
    <string name="zyh">作业号：</string>
    <string name="lqzh">林权证号：</string>
    <string name="lc">林场：</string>
    <string name="gzq">工作区：</string>
    <string name="lb">林班：</string>
    <string name="yszbh">运输证编号：</string>
    <string name="hzmc">货主名称：</string>
    <string name="cyr">承运人：</string>
    <string name="ysfs">运输方式：</string>
    <string name="ysqtfs">运输其他方式：</string>
    <string name="lzr">领证人：</string>
    <string name="jszcdw">技术支撑单位</string>
    <string name="zjf">总经费</string>
    <string name="czbz">财政补助</string>
    <string name="remark">备注</string>
    <string name="ldmj">林地面积</string>
    <string name="slmj">森林面积</string>
    <string name="gjgyl">国家级公益林</string>
    <string name="dfgyl">地方公益林</string>
    <string name="gylzmj">公益林总面积</string>
    <string name="slfgl">森林覆盖率</string>
    <string name="hlmxj">活立木蓄积</string>
    <string name="lon">经度</string>
    <string name="lat">纬度</string>
    <string name="lonlat">经、纬度</string>
    <string name="sjms">事件描述</string>
    <string name="sjlx">事件类型</string>
    <string name="fsdd">发生地点</string>
    <string name="lxfs">联系方式</string>
    <string name="sj">时间</string>
    <string name="pic">图片</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="loc_save">本地保存</string>
    <string name="up_event">在线上报</string>
    <string name="search">搜索</string>
    <string name="voice_search">点我  说出你想搜的</string>
    <string name="voice_stop_search">点我  结束聆听</string>
    <string name="Year">年份</string>
    <string name="CityName">市</string>
    <string name="DistrictName">区县</string>
    <string name="VillageName">乡</string>
    <string name="Remark_slfh">火灾名称</string>
    <string name="FireGrade">火灾等级</string>
    <string name="FireArea">火场面积</string>
    <string name="LossArea">损失面积</string>
    <string name="Money">扑火经费</string>
    <string name="MinorCount">轻伤人员</string>
    <string name="SeriousCount">重伤人员</string>
    <string name="DeathCount">死亡人员</string>
    <string name="ForestAccumulation">成林蓄积</string>
    <string name="RecordTime">登记时间</string>
    <string name="FireNo">火灾编号</string>
    <string name="StartTime">火灾开始时间</string>
    <string name="EndTime">火灾扑灭时间</string>
    <string name="JDD">经度(度)</string>
    <string name="JDF">经度(分)</string>
    <string name="JDM">经度(秒)</string>
    <string name="WDD">纬度(度)</string>
    <string name="WDF">纬度(分)</string>
    <string name="WDM">纬度(秒)</string>
    <string name="PD">坡度</string>
    <string name="HXDJ">火险等级</string>
    <string name="GHMJ">过火面积</string>
    <string name="SHSLMJ">受害森林面积</string>
    <string name="TRLMJ">天然林面积</string>
    <string name="RGLMJ">人工林面积</string>
    <string name="QHXXYY">起火详细原因</string>
    <string name="ZSZXM">肇事者姓名</string>
    <string name="ZSZXB">肇事者性别</string>
    <string name="ZSZNL">肇事者年龄</string>
    <string name="CLXXJG">处理详细结果</string>
    <string name="GCJY">扑火过程简述及经验教训</string>
    <string name="QHYY">起火原因</string>
    <string name="SBR">上报人</string>
    <string name="DCR">调查人</string>
    <string name="No">案件编号</string>
    <string name="CaseNo">案件文号</string>
    <string name="PutUnder">案件归口</string>
    <string name="CaseType">案件类别</string>
    <string name="CaseTime">报案时间</string>
    <string name="Sponsor">主办人</string>
    <string name="Status">案件状态</string>
    <string name="Remark_xzzf">报案内容</string>
    <string name="CallType">报案方式</string>
    <string name="DetailRemark">详细地址</string>
    <string name="ApplicationId">编号</string>
    <string name="AreaType">类型</string>
    <string name="ApprovalAuthority">审批权限</string>
    <string name="ProjectName">项目名称</string>
    <string name="Approve">项目批准机关</string>
    <string name="ApprovalNumber">批准文号</string>
    <string name="ShouldForestVegetationRestorationCosts">森林植被恢复费</string>
    <string name="AdminstativeName">地区</string>
    <string name="Area">造林面积</string>
    <string name="SlashArea">迹地更新面积</string>
    <string name="TendingArea">森林抚育</string>
    <string name="ForestTendingArea">森林抚育</string>
    <string name="SealingArea">封山育林面积</string>
    <string name="ThourTree">四旁(零星)植树</string>
    <string name="NurseryStock">当年苗木产量</string>
    <string name="GrowArea">育苗面积</string>
    <string name="NewBreedingArea">新育苗面积</string>
    <string name="ReforestationArea">人工造林面积</string>
    <string name="LowForestArea">低效林改造</string>
    <string name="AdminstrativeName">地区</string>
    <string name="Name">指标</string>
    <string name="HappenArea">发生面积</string>
    <string name="PreventionArea">防治面积</string>
    <string name="PreventionControlArea">防治作业面积</string>
</resources>