<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="personalViewModel"
            type="com.otitan.main.viewmodel.PersonalViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_resource"
            style="@style/toolbar_style"
            app:title="@string/main_grzx"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/grzx_smdl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_view_rounded_white"
            android:drawableLeft="@drawable/user_smdl"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center|left"
            android:onClick="@{()-> personalViewModel.slogin()}"
            android:padding="10dp"
            android:text="@string/txt_smdl" />


        <TextView
            android:id="@+id/grzx_xgmm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_view_rounded_white"
            android:drawableLeft="@drawable/user_xgmm"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center|left"
            android:onClick="@{()-> personalViewModel.updataPassword()}"
            android:padding="10dp"
            android:text="@string/txt_xgmm" />

        <TextView
            android:id="@+id/grzx_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_white"
            android:drawableLeft="@drawable/user_setting"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center|left"
            android:onClick="@{()-> personalViewModel.setting()}"
            android:padding="10dp"
            android:text="@string/txt_setting" />


        <TextView
            android:id="@+id/grzx_bbgx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_white"
            android:drawableLeft="@drawable/user_ico06"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center|left"
            android:onClick="@{()-> personalViewModel.updataVersion()}"
            android:padding="10dp"
            android:text="@string/txt_bbgx" />

        <TextView
            android:id="@+id/grzx_gjcx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_view_rounded_white"
            android:drawableLeft="@drawable/user_ico04"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center|left"
            android:onClick="@{()-> personalViewModel.searchGuiji()}"
            android:padding="10dp"
            android:text="@string/txt_gjcx" />

    </LinearLayout>
</layout>
