<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.otitan.customview.TitanViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_main" />
        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/transparent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_gray" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:showDividers="beginning">

                <RadioButton
                    android:id="@+id/rb_homepage"
                    style="@style/style_RadioButton"
                    android:checked="true"
                    android:drawableTop="@drawable/rb_home_selector"
                    android:text="@string/inspection" />

                <RadioButton
                    android:id="@+id/rb_info"
                    style="@style/style_RadioButton"
                    android:drawableTop="@drawable/rb_info_selector"
                    android:text="@string/overview" />

                <RadioButton
                    android:id="@+id/rb_oa"
                    style="@style/style_RadioButton"
                    android:drawableTop="@drawable/rb_oa_selector"
                    android:text="@string/zjjc" />

                <RadioButton
                    android:id="@+id/rb_law"
                    style="@style/style_RadioButton"
                    android:drawableTop="@drawable/rb_law_selector"
                    android:text="@string/center" />

            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>
</layout>
